date filter and minors changes in set query